script 사용 마우스오버

--- a/onmouse.html
+++ b/onmouse.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>태그에 자바스크립트</title>
+<html>
+<head><title>script 태그에 자바스크립트 작성</title>
+<script>
+function over(obj) {
+	obj.src="./image/구글.jpg";
+}
+function out(obj) {
+	obj.src="./image/하이ㅠㅓ.png";
+}
+</script>
 </head>
 <body>
-    <img src="./image/구글.jpg" alt="이미지"
-        onmouseover="this.src='./image/하이ㅠㅓ.png'"
-        onmouseout="this.src='./image/구글.jpg'">
+<h3>마우스 올려 보세요</h3>
+<hr>
+<img src="./image/하이ㅠㅓ.png" alt="이미지" 
+			onmouseover="over(this)"
+			onmouseout="out(this)">
 </body>
 </html>
